engg report links updated

--- a/index.html
+++ b/index.html
@@ -75,12 +75,20 @@
         <p><a href="SCADA-Experience-FUXA.html" target="_blank" rel="noopener noreferrer">
             SCADA, HMI and PLC Build with Embedded Systems</a></p>
         <p><a href="Arduino-Indoor-Garden-Box-with-Data-Logger.html" target="_blank" rel="noopener noreferrer">
-          Arduino Garden Box with Data Logger</a></p>
+            Arduino Garden Box with Data Logger</a></p>
         <p><a href="https://www.essualberta.ca/studentgroups/red" target="_blank" rel="noopener noreferrer">
-          Renewable Energy Design (RED) – UAlberta Engineering Club</a></p>
+            Renewable Energy Design (RED) – UAlberta Engineering Club</a></p>
         <p><a href="https://redclubualberta.pages.dev/" target="_blank" rel="noopener noreferrer">
-          Club Showcasing Website, Built with React Frontend and Quarkly,
-          (redclubualberta.pages.dev)</a></p>
+            Club Showcasing Website, Built with React Frontend and Quarkly,
+            (redclubualberta.pages.dev)</a></p>
+        <p><a href="Arduino-Weather-Station-Anemometer-Engg-Course.html" target="_blank" rel="noopener noreferrer">
+            Project Management and Reporting - Arduino Weather Station - Article</a></p>
+        <p><a href="https://drive.google.com/file/d/1h4TA9GO__wnLZlGzS2l-zAZamB9U_P4D/view?usp=drive_link"
+            target="_blank" rel="noopener noreferrer">
+            Project Management and Reporting - Arduino Weather Station - Video</a></p>
+        <p><a href="https://drive.google.com/file/d/1OjcB9O3FXe1hG6xHjeqg075VgFYRIVXw/view?usp=drive_link"
+            target="_blank" rel="noopener noreferrer">
+            Project Management and Reporting - Arduino Weather Station - Report</a></p>
       </div>
     </section>
 
