--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
     <section class="wrapper style1">
       <div class="container">
         <h2>For fast reviewing, I have placed quick links of Resume experiences below:</h2>
+        <p><a href="HoynickBrandon_Resume2pgQual.pdf" target="_blank" rel="noopener noreferrer">
+          RESUME</a></p>
         <p><a href="Unity-UAlberta-AR-App-Dev.html" target="_blank" rel="noopener noreferrer">
             Unity 3D Experience Designer – UAlberta AR App</a></p>
         <p><a href="SCADA-Experience-FUXA.html" target="_blank" rel="noopener noreferrer">
