--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </nav>
     </div>
 
-    <section class="wrapper style1">
+    <!-- <section class="wrapper style1">
       <div class="container">
         <div class="row gtr-200">
           <h3><a href="https://cvprofile-website-vite.pages.dev/" target="_blank" rel="noopener noreferrer">New website
@@ -63,7 +63,7 @@
               articles/links.)</a></h3>
         </div>
       </div>
-    </section>
+    </section> -->
 
 
 
